classDiagram
    class Resource {
        -str _resource_id
        -str _location
        -int _max_capacity
        +__init__(resource_id: str, location: str, max_capacity: int)
        +get_resource_id() str
        +get_location() str
        +get_max_capacity() int
        +get_details() str
    }

    class LabSpace {
        -int number_of_pcs
        -str os_type
        +__init__(resource_id: str, location: str, max_capacity: int, number_of_pcs: int, os_type: str)
        +get_details() str
    }

    class MeetingRoom {
        -bool has_projector
        -str seating_layout
        +__init__(resource_id: str, location: str, max_capacity: int, has_projector: bool, seating_layout: str)
        +get_details() str
    }

    class User {
        -str _user_id
        -str _name
        +__init__(user_id: str, name: str)
        +get_user_id() str
        +get_name() str
    }

    class Booking {
        -str booking_id
        -Resource resource
        -User user
        -str date
        -str time_slot
        -int attendees
        +__init__(booking_id: str, resource: Resource, user: User, date: str, time_slot: str, attendees: int)
        +get_booking_details() str
    }

    Resource <|-- LabSpace : inherits
    Resource <|-- MeetingRoom : inherits

    User "1" --> "0..*" Booking : creates
    Booking --> "1" Resource : references
    Booking --> "1" User : linked to